@@ -1,3 +1,9 @@
+2001-12-23  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02699] initialization too late
+	* main.c (MAIN): initializations moved before arg processing
+	* debian bug closes: Bug##102445: ignores SIGWINCH while downloading
+
 2001-12-22  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
 	* [w3m-dev 02696]
@@ -1437,4 +1443,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.161 2001/12/22 10:02:04 ukai Exp $
+$Id: ChangeLog,v 1.162 2001/12/23 14:24:22 ukai Exp $
